--- a/css.css
+++ b/css.css
@@ -1,19 +1,31 @@
-
-
 body {
-    background-color:#ffdfbb;
+    background-color:#361d00;
     color:#693a00;
      font-family:'Courier New', Courier, monospace; 
 }
+#wrapper{
+    background-color:#ffdfbb;
+    min-width: 1000px;
+    max-width: 1280px;
+    margin: auto;
+}
 header {
     background-color: #ff6e42;
+    height: 150px;
+    background-image: url("omgitshim.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 150px;
 }
 h1 {
     line-height: 200%;
+    padding-top: 50px;
+    padding-left: 2em;
 }
 nav {
     text-align: center;
     font-weight: bold;
+    padding: 1em;
 }
 nav a {
     text-decoration: none;
@@ -23,4 +35,15 @@ footer {
     font-size: .60em; 
     text-align: center;
     font-style: italic;
+    padding: 1em;
+}
+main {
+    padding-left: 2em;
+    padding-right: 2em;
+}
+img {
+    padding-left: 1em;
+    padding-right: 1em;
+    margin: auto;
+    display: block;
 }
